@@ -132,6 +132,8 @@ SVN trunk:
    * Updated description of backstab to match the new functionallity.
    * Updated description of Beserk to mention the 30 round limit.
    * Updated description of movement.
+ * Changed recall to allow you to see your recall list even if you have too
+   little gold to recall any units.
  * various bug fixes and code cleanups
 
 Version 1.0rc1:
